added python script to download kaggle data, only working on windows for now. Need to put raw data from LC on google drive

--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "23eb425f-7288-447d-a604-159c6572849e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\")\n",
@@ -14,19 +18,22 @@
     "library(tidyverse)\n",
     "library(data.table)\n",
     "library(dtplyr)\n",
-    "library(dplyr, warn.conflicts = FALSE)\n",
-    "\n"
+    "library(dplyr, warn.conflicts = FALSE)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5c240597-4060-4862-a334-d99d9a78d27d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
-    "raw_shots <- read_csv(\"../Downloads/NBA_Shots_Raw.csv\")\n",
-    "player_info <- read_csv(\"../Downloads/nba_db/common_player_info.csv\")\n",
+    "raw_shots <- read_csv(\"../Data/NBA_Shots_Raw.csv\")\n",
+    "player_info <- read_csv(\"../Data/archive/csv/common_player_info.csv\")\n",
     "player_info <- player_info %>% rename(PLAYER_NAME=\"display_first_last\")"
    ]
   },
@@ -34,7 +41,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "24d111f8-a65d-45c8-91bf-9333cff7613a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "colnames(raw_shots)\n",
@@ -47,7 +58,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5743dc19-f411-452a-9bd0-758861182aa5",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "s <- raw_shots %>% \n",
@@ -61,7 +76,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "76e03eb0-ba9a-4a82-be9b-2ca1e295f7f9",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "ggplot(s, aes(x=SHOT_DIST)) + \n",
@@ -72,7 +91,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "544a2b07-c939-471f-90d1-88920c260a20",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "options(repr.plot.width = 10, repr.plot.height = 7)\n",
@@ -95,7 +118,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1b3b91f1-00a2-4a8a-a8fb-b4681e93205d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "raw_shots %>%\n",
@@ -110,7 +137,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4676d5c1-3764-40d6-a7cd-d22bd71f6bc9",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "shooter_data <- raw_shots %>% \n",
@@ -128,22 +159,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fa7834ce-dba1-4eb7-8164-4eab5e9424f3",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "shooter_data %>%\n",
     "    group_by(team_abbreviation) %>%\n",
-    "    slice_max(order_by=pct_3pt, n=1) %>%\n",
-    "    arrange(desc(pct_3pt))"
+    "    #slice_max(order_by=pct_3pt, n=1) %>%\n",
+    "    arrange(desc(total_FGM))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5fad8774-c0ae-4187-bf9f-e268d9307515",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
