--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -5,20 +5,26 @@
    "execution_count": null,
    "id": "23eb425f-7288-447d-a604-159c6572849e",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [],
     "vscode": {
      "languageId": "r"
     }
    },
    "outputs": [],
    "source": [
-    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\")\n",
+    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"arrow\")\n",
     "new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,\"Package\"])]\n",
     "if(length(new.packages)) install.packages(new.packages)\n",
     "\n",
     "library(tidyverse)\n",
     "library(data.table)\n",
-    "library(dtplyr)\n",
-    "library(dplyr, warn.conflicts = FALSE)"
+    "#library(dtplyr)\n",
+    "#library(dplyr, warn.conflicts = FALSE)\n",
+    "library(arrow)"
    ]
   },
   {
@@ -33,8 +39,11 @@
    "outputs": [],
    "source": [
     "raw_shots <- read_csv(\"../Data/NBA_Shots_Raw.csv\")\n",
-    "player_info <- read_csv(\"../Data/archive/csv/common_player_info.csv\")\n",
-    "player_info <- player_info %>% rename(PLAYER_NAME=\"display_first_last\")"
+    "player_info <- read_csv(\"../Data/Player_Info.csv\")\n",
+    "player_salary <- read_csv(\"../Data/Player_Salary.csv\")\n",
+    "player_info <- player_info %>% mutate(PLAYER_NAME = paste(First_Name, Surname))\n",
+    "player_salary <- player_salary %>% rename(PLAYER_NAME = Name)\n",
+    "clean_shots <- read_csv(\"../Data/NBA_Shots_Clean_Example.csv\")"
    ]
   },
   {
@@ -49,42 +58,13 @@
    "outputs": [],
    "source": [
     "colnames(raw_shots)\n",
+    "colnames(clean_shots)\n",
     "colnames(player_info)\n",
-    "unique(player_info$position)\n",
-    "head(raw_shots)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5743dc19-f411-452a-9bd0-758861182aa5",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "s <- raw_shots %>% \n",
-    "    left_join(player_info %>% \n",
-    "    select(position, PLAYER_NAME), by=\"PLAYER_NAME\") %>% \n",
-    "    filter(position == \"Guard\") %>% \n",
-    "    select(SHOT_DIST)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76e03eb0-ba9a-4a82-be9b-2ca1e295f7f9",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "ggplot(s, aes(x=SHOT_DIST)) + \n",
-    "    geom_histogram(bins=30)"
+    "colnames(player_salary)\n",
+    "#player_statistics %>% count() %>% collect()\n",
+    "#head(raw_shots)\n",
+    "#head(player_info)\n",
+    "#head(player_salary)\n"
    ]
   },
   {
@@ -101,13 +81,13 @@
     "options(repr.plot.width = 10, repr.plot.height = 7)\n",
     "\n",
     "s <- raw_shots %>% \n",
-    "    left_join(player_info %>% select(position, PLAYER_NAME), by = \"PLAYER_NAME\") %>%\n",
-    "    filter(!is.na(position)) %>%\n",
-    "    select(SHOT_DIST, position)\n",
+    "    left_join(player_info %>% select(Pos, PLAYER_NAME), by = \"PLAYER_NAME\") %>%\n",
+    "    filter(!is.na(Pos)) %>%\n",
+    "    select(SHOT_DIST, Pos)\n",
     "\n",
     "ggplot(s, aes(x = SHOT_DIST)) +\n",
     "    geom_histogram(bins = 30, fill = \"blue\", color = \"black\", alpha = 0.5) +\n",
-    "    facet_wrap(~ position) +\n",
+    "    facet_wrap(~ Pos) +\n",
     "    labs(title = \"Shot Distance Distribution by Position\",\n",
     "       x = \"Shot Distance (feet)\",\n",
     "       y = \"Frequency\") +\n",
@@ -125,26 +105,13 @@
    },
    "outputs": [],
    "source": [
-    "raw_shots %>%\n",
-    "    left_join(player_info %>% select(position, PLAYER_NAME), by = \"PLAYER_NAME\", relationship=\"many-to-many\") %>%\n",
-    "    filter(!is.na(position)) %>%\n",
-    "    group_by(PLAYER_NAME, position) %>% \n",
+    "l1 <- raw_shots %>%\n",
+    "    left_join(player_info %>% select(Pos, PLAYER_NAME), by = \"PLAYER_NAME\", relationship=\"many-to-many\") %>%\n",
+    "    filter(!is.na(Pos)) %>%\n",
+    "    group_by(PLAYER_NAME, Pos) %>% \n",
     "    summarize(tot_FGM = sum(FGM), .groups=\"drop\") %>% \n",
-    "    arrange(desc(tot_FGM))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4676d5c1-3764-40d6-a7cd-d22bd71f6bc9",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "shooter_data <- raw_shots %>% \n",
+    "    arrange(desc(tot_FGM))\n",
+    "l2 <- raw_shots %>% \n",
     "    filter(FGM == 1) %>% \n",
     "    group_by(PLAYER_NAME) %>%\n",
     "    summarise(\n",
@@ -152,7 +119,7 @@
     "        pct_3pt = sum(PTS_TYPE == 3),\n",
     "        pct_2pt = sum(PTS_TYPE == 2)\n",
     "    ) %>%\n",
-    "    left_join(player_info %>% select(position, PLAYER_NAME, team_abbreviation), by = \"PLAYER_NAME\", relationship=\"many-to-many\")"
+    "    left_join(player_info %>% select(Pos, PLAYER_NAME, Team, Age), by = \"PLAYER_NAME\", relationship=\"many-to-many\")"
    ]
   },
   {
@@ -166,11 +133,93 @@
    },
    "outputs": [],
    "source": [
-    "shooter_data %>%\n",
-    "    group_by(team_abbreviation) %>%\n",
-    "    #slice_max(order_by=pct_3pt, n=1) %>%\n",
-    "    arrange(desc(total_FGM))"
+    "raw_shots %>% summarise(unique_players = n_distinct(PLAYER_NAME))\n",
+    "player_info %>% summarise(unique_players = n_distinct(PLAYER_NAME))\n",
+    "player_salary %>% summarise(unique_players = n_distinct(PLAYER_NAME))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f19a64c-2571-4083-90c4-9be5e238b22f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#clean_shots %>% \n",
+    "#    filter(PERIOD <= 3) %>%\n",
+    "#    select(HOME_TEAM, AWAY_TEAM, WIN_LOSE)\n",
+    "#    group_by(\n",
+    "\n",
+    "clean_shots %>% \n",
+    "    select(GAME_ID, FINAL_MARGIN, WIN_LOSE, HOME_TEAM, AWAY_TEAM, LOCATION) %>%\n",
+    "    filter(FINAL_MARGIN <= 3 & FINAL_MARGIN >= 0) %>% #no need to filter for w/l\n",
+    "    distinct(GAME_ID, .keep_all=TRUE) %>%\n",
+    "    summarise(home_win_pct = sum(LOCATION == \"H\")/n())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b44c48c",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "play_by_play <- open_dataset(\"../Data/wyatt_basketball/csv/play_by_play.csv\", format=\"csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17cd9fe5-d721-4926-aacd-4dee8aa21304",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "play_by_play %>% head(10) %>% collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3975da1-c20d-4d86-9dec-4742180e8a8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf7e57bd-a5e5-471a-9b37-795719edce04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "header <- scan(\"../Data/historical-nba-data-and-player-box-scores/PlayerStatistics.csv\", what = \"\", sep = \",\", nlines = 1, quiet = TRUE)\n",
+    "\n",
+    "player_statistics <- open_dataset(\"../Data/historical-nba-data-and-player-box-scores/PlayerStatistics.csv\", format=\"csv\", skip_rows=1 , column_names = make.unique(header, sep = \"_\"))\n",
+    "player_statistics <- player_statistics %>% mutate(PLAYER_NAME = paste(firstName, lastName))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9bfc9b9-9117-46cd-8658-cb37b2f98c1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_statistics %>% head(10) %>% collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee431864-7203-4cfd-89ee-94eb0700684b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
