fixed issue with home adv close game code

--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -142,7 +142,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8f19a64c-2571-4083-90c4-9be5e238b22f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "#clean_shots %>% \n",
@@ -152,9 +156,9 @@
     "\n",
     "clean_shots %>% \n",
     "    select(GAME_ID, FINAL_MARGIN, WIN_LOSE, HOME_TEAM, AWAY_TEAM, LOCATION) %>%\n",
-    "    filter(FINAL_MARGIN <= 3 & FINAL_MARGIN >= 0) %>% #no need to filter for w/l\n",
+    "    filter(abs(FINAL_MARGIN) <= 3) %>% #no need to filter for w/l\n",
     "    distinct(GAME_ID, .keep_all=TRUE) %>%\n",
-    "    summarise(home_win_pct = sum(LOCATION == \"H\")/n())\n",
+    "    summarise(home_win_pct = 100*sum(FINAL_MARGIN > 0 & LOCATION == \"H\")/sum(LOCATION == \"H\"))\n",
     "    "
    ]
   },
@@ -176,7 +180,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "17cd9fe5-d721-4926-aacd-4dee8aa21304",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "play_by_play %>% head(10) %>% collect()"
@@ -186,7 +194,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e3975da1-c20d-4d86-9dec-4742180e8a8a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -194,7 +206,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cf7e57bd-a5e5-471a-9b37-795719edce04",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "header <- scan(\"../Data/historical-nba-data-and-player-box-scores/PlayerStatistics.csv\", what = \"\", sep = \",\", nlines = 1, quiet = TRUE)\n",
@@ -207,7 +223,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a9bfc9b9-9117-46cd-8658-cb37b2f98c1e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "player_statistics %>% head(10) %>% collect()"
@@ -217,7 +237,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ee431864-7203-4cfd-89ee-94eb0700684b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   }
