added code to look if the game was close at the end of the 3rd quarter rather than final margin. not significant from binom test but needs to be scaled up on more data to check for certain

--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -154,12 +154,44 @@
     "#    select(HOME_TEAM, AWAY_TEAM, WIN_LOSE)\n",
     "#    group_by(\n",
     "\n",
-    "clean_shots %>% \n",
-    "    select(GAME_ID, FINAL_MARGIN, WIN_LOSE, HOME_TEAM, AWAY_TEAM, LOCATION) %>%\n",
-    "    filter(abs(FINAL_MARGIN) <= 3) %>% #no need to filter for w/l\n",
-    "    distinct(GAME_ID, .keep_all=TRUE) %>%\n",
-    "    summarise(home_win_pct = 100*sum(FINAL_MARGIN > 0 & LOCATION == \"H\")/sum(LOCATION == \"H\"))\n",
-    "    "
+    "#clean_shots %>% \n",
+    "#    select(GAME_ID, FINAL_MARGIN, WIN_LOSE, HOME_TEAM, AWAY_TEAM, LOCATION) %>%\n",
+    "#    filter(abs(FINAL_MARGIN) <= 3) %>% #no need to filter for w/l\n",
+    " #   distinct(GAME_ID, .keep_all=TRUE) %>%\n",
+    "#    summarise(home_win_pct = 100*sum(FINAL_MARGIN > 0 & LOCATION == \"H\")/sum(LOCATION == \"H\"))\n",
+    "\n",
+    "\n",
+    "#clean_shots %>%\n",
+    "#    select(GAME_ID, WIN_LOSE, HOME_TEAM, AWAY_TEAM, LOCATION, PERIOD, PTS_TYPE, SUCCESS) %>%\n",
+    "#    mutate(pts = PTS_TYPE * SUCCESS) %>%\n",
+    "#    filter(PERIOD <= 3) %>%\n",
+    "#    group_by(GAME_ID, LOCATION) %>%\n",
+    "#    summarise(total_pts = sum(pts), .groups = \"drop\") %>%\n",
+    "#    pivot_wider(names_from = LOCATION, values_from = total_pts, names_prefix = \"pts_\") %>%\n",
+    "#    summarise(pts_diff_H = pts_H-pts_A)\n",
+    "\n",
+    "home_win <- clean_shots %>%\n",
+    "    filter(LOCATION == \"H\") %>%\n",
+    "    select(GAME_ID, HOME_TEAM, AWAY_TEAM, WIN_LOSE) %>%\n",
+    "    distinct(GAME_ID, .keep_all=TRUE)\n",
+    "\n",
+    "clean_shots %>%\n",
+    "    filter(PERIOD <= 3) %>%\n",
+    "    mutate(pts = PTS_TYPE * SUCCESS) %>%\n",
+    "    group_by(GAME_ID, LOCATION) %>%\n",
+    "    summarise(total_pts = sum(pts), .groups = \"drop\") %>%\n",
+    "    pivot_wider(names_from = LOCATION, values_from = total_pts, names_prefix = \"pts_\") %>%\n",
+    "    left_join(home_win, by=\"GAME_ID\") %>%\n",
+    "    rename(HOME_RESULT = WIN_LOSE) %>%\n",
+    "    mutate(pts_diff = abs(pts_H - pts_A)) %>%\n",
+    "    filter(pts_diff <= 3) %>%\n",
+    "    summarise(\n",
+    "        home_pct_win = sum(HOME_RESULT == \"W\")/n(),\n",
+    "        home_wins = sum(HOME_RESULT == \"W\"),\n",
+    "        total_games = n()\n",
+    "    )\n",
+    "\n",
+    "binom.test(x=86, n=161, p=0.5, alternative=\"greater\")"
    ]
   },
   {
