added duckdb to gitignore and used to deal with play_by_play.csv

--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -16,7 +16,7 @@
    },
    "outputs": [],
    "source": [
-    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"arrow\")\n",
+    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"arrow\", \"dbplyr\", \"duckdb\")\n",
     "new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,\"Package\"])]\n",
     "if(length(new.packages)) install.packages(new.packages)\n",
     "\n",
@@ -24,7 +24,8 @@
     "library(data.table)\n",
     "#library(dtplyr)\n",
     "#library(dplyr, warn.conflicts = FALSE)\n",
-    "library(arrow)"
+    "library(arrow)\n",
+    "library(duckdb)"
    ]
   },
   {
@@ -219,7 +220,7 @@
    },
    "outputs": [],
    "source": [
-    "play_by_play %>% head(10) %>% collect()"
+    "colnames(play_by_play %>% head(10))"
    ]
   },
   {
@@ -245,16 +246,13 @@
    },
    "outputs": [],
    "source": [
-    "header <- scan(\"../Data/historical-nba-data-and-player-box-scores/PlayerStatistics.csv\", what = \"\", sep = \",\", nlines = 1, quiet = TRUE)\n",
-    "\n",
-    "player_statistics <- open_dataset(\"../Data/historical-nba-data-and-player-box-scores/PlayerStatistics.csv\", format=\"csv\", skip_rows=1 , column_names = make.unique(header, sep = \"_\"))\n",
-    "player_statistics <- player_statistics %>% mutate(PLAYER_NAME = paste(firstName, lastName))"
+    "player_statistics_od <- open_dataset(\"../Data/historical-nba-data-and-player-box-scores/PlayerStatistics.csv\", format=\"csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9bfc9b9-9117-46cd-8658-cb37b2f98c1e",
+   "id": "23239e9e-93e5-4f84-99b5-5719517d2aec",
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -262,18 +260,50 @@
    },
    "outputs": [],
    "source": [
-    "player_statistics %>% head(10) %>% collect()"
+    "player_statistics_od %>% head() %>% collect()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee431864-7203-4cfd-89ee-94eb0700684b",
+   "id": "bc3faab2",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
+   "outputs": [],
+   "source": [
+    "con <- DBI::dbConnect(\n",
+    "  duckdb::duckdb(), dbdir = \".tmp.duckdb\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "510d65c1-58c1-4ea5-92fb-1753c88cb282",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "duckdb_read_csv(con, name=\"play_by_play\", files=\"../Data/wyatt_basketball/csv/play_by_play.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43d50b73-6912-4ae0-abd9-4a431fcaa111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tbl(con, \"play_by_play\") %>% distinct(game_id) %>% count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4460fe32-cfaa-4564-92cd-dda2d74a2f73",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
