shot success modelling and mixed effects

--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -16,7 +16,7 @@
    },
    "outputs": [],
    "source": [
-    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"arrow\", \"dbplyr\", \"duckdb\")\n",
+    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"arrow\", \"dbplyr\", \"duckdb\", \"lme4\", \"dbscan\", \"pROC\")\n",
     "new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,\"Package\"])]\n",
     "if(length(new.packages)) install.packages(new.packages)\n",
     "\n",
@@ -25,7 +25,10 @@
     "#library(dtplyr)\n",
     "#library(dplyr, warn.conflicts = FALSE)\n",
     "library(arrow)\n",
-    "library(duckdb)"
+    "library(duckdb)\n",
+    "library(lme4)\n",
+    "library(dbscan)\n",
+    "library(pROC)"
    ]
   },
   {
@@ -283,7 +286,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "510d65c1-58c1-4ea5-92fb-1753c88cb282",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "duckdb_read_csv(con, name=\"play_by_play\", files=\"../Data/wyatt_basketball/csv/play_by_play.csv\")"
@@ -293,17 +300,156 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "43d50b73-6912-4ae0-abd9-4a431fcaa111",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
-    "tbl(con, \"play_by_play\") %>% distinct(game_id) %>% count()"
+    "colnames(tbl(con, \"play_by_play\") %>% head(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d59ca827",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "tbl(con, \"play_by_play\") %>% count(eventmsgtype) %>% collect()\n",
+    "tbl(con, \"play_by_play\") %>% filter(eventmsgtype == 1) %>% head(10) %>% collect()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4460fe32-cfaa-4564-92cd-dda2d74a2f73",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbDisconnect(con, shutdown=TRUE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7edcfde0",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "colnames(clean_shots)\n",
+    "head(clean_shots)\n",
+    "\n",
+    "clean_shots_scaled <- clean_shots %>%\n",
+    "  mutate(across(c(SHOT_DIST, CLOSE_DEF_DIST, SHOT_CLOCK, TOUCH_TIME, PERIOD), scale))\n",
+    "\n",
+    "train_idx <- sample(1:nrow(clean_shots_scaled), 0.7 * nrow(clean_shots_scaled))\n",
+    "train_data <- clean_shots_scaled[train_idx, ]\n",
+    "test_data <- clean_shots_scaled[-train_idx, ]\n",
+    "\n",
+    "\n",
+    "log_model <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + SHOT_CLOCK + TOUCH_TIME, data=clean_shots, family=\"binomial\")\n",
+    "log_mm_model <- glmer(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + SHOT_CLOCK + TOUCH_TIME + PERIOD +\n",
+    "                      (SHOT_DIST | PLAYER_ID),\n",
+    "                    data = train_data,\n",
+    "                    family=binomial(link = \"logit\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "716a844f",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "summary(log_mm_model)\n",
+    "test_data$pred_prob <- predict(log_mm_model, type = \"response\", newdata=test_data)\n",
+    "roc(SUCCESS ~ pred_prob, data = test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8624de99",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ggplot(clean_shots, aes(x=SHOT_DIST, y=TOUCH_TIME)) + \n",
+    "    geom_point()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c5f8cb1",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "library(dbscan)\n",
+    "library(ggplot2)\n",
+    "\n",
+    "# First, let's prepare the data\n",
+    "cluster_data <- clean_shots[, c(\"SHOT_DIST\", \"TOUCH_TIME\")]\n",
+    "\n",
+    "# Standardize the data (important for distance-based algorithms like DBSCAN)\n",
+    "scaled_data <- scale(cluster_data)\n",
+    "\n",
+    "# Determine optimal eps value using k-NN distance plot\n",
+    "kNNdistplot(scaled_data, k = 5)\n",
+    "abline(h = 0.5, col = \"red\")  # Example threshold line - adjust based on plot\n",
+    "\n",
+    "# Perform DBSCAN clustering (example parameters - adjust based on your data)\n",
+    "set.seed(123)\n",
+    "dbscan_result <- dbscan(scaled_data, eps = 1.5, minPts = 5)\n",
+    "\n",
+    "# Add cluster labels to original data\n",
+    "clean_shots$cluster <- as.factor(dbscan_result$cluster)\n",
+    "\n",
+    "# Plot results\n",
+    "ggplot(clean_shots, aes(x = SHOT_DIST, y = TOUCH_TIME, color = cluster)) +\n",
+    "  geom_point(alpha = 0.6) +\n",
+    "  scale_color_discrete(name = \"Cluster\", \n",
+    "                      labels = c(\"Noise\", \"Cluster 1\", \"Cluster 2\", \"Cluster 3\")) +\n",
+    "  labs(title = \"DBSCAN Clustering of Basketball Shots\",\n",
+    "       x = \"Shot Distance\",\n",
+    "       y = \"Touch Time\") +\n",
+    "  theme_minimal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22287670",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": []
   }
