Fixing typos in clean_shots, merging many datasets to get the height for all but 2 players.

--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -51,29 +51,39 @@
     "clean_shots <- read_csv(\"../Data/NBA_Shots_Clean_Example.csv\")\n",
     "common_player_info <- read_csv(\"../Data/wyatt_basketball/csv/common_player_info.csv\")\n",
     "common_player_info <- common_player_info %>% mutate(PLAYER_NAME = paste(first_name, last_name))\n",
-    "\n",
+    "height_2014 <- read_csv(\"../Data/simonwarchol-NBA-Height-Weight-7871d8b/CSVs/Yearly/2014.csv\")\n",
+    "height_2014 <- height_2014 %>% rename(PLAYER_NAME = Name)\n",
     "\n",
     "#clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Kyle Oquinn\", \"Kyle O'Quinn\")))\n",
     "#clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Al Farouq Aminu\", \"Al-Farouq Aminu\")))\n",
     "#clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Lamarcus Aldridge\", \"LaMarcus Aldridge\")))\n",
     "#clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Oj Mayo\", \"O.J. Mayo\")))\n",
     "#clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Cj Miles\", \"C.J. Miles\")))\n",
+    "clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Time Hardaway Jr\", \"Tim Hardaway Jr\")))\n",
     "player_info <- player_info %>% mutate(across(where(is.character), ~ str_replace_all(., \"Luc Mbah\", \"Luc Mbah a Moute\")))\n",
+    "clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Steve Adams\", \"Steven Adams\")))\n",
     "\n",
     "\n",
-    "player_info <- player_info %>% \n",
-    "    mutate(PLAYER_NAME = str_to_title(PLAYER_NAME)) %>%\n",
+    "\n",
+    "player_info <- player_info %>%\n",
     "    mutate(PLAYER_NAME = str_remove_all(PLAYER_NAME, \"\\\\.\")) %>%\n",
-    "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"-\", \" \"))\n",
-    "\n",
-    "# keep for now\n",
-    "player_info <- player_info %>% \n",
-    "    mutate(Surname = str_to_title(Surname)) %>%\n",
-    "    mutate(Surname = str_remove_all(Surname, \"\\\\.\")) %>%\n",
-    "    mutate(Surname = str_replace_all(Surname, \"-\", \" \"))\n",
+    "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"-\", \" \")) %>%\n",
+    "    mutate(PLAYER_NAME = str_to_title(PLAYER_NAME))\n",
     "\n",
     "clean_shots <- clean_shots %>%\n",
-    "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"-\", \" \"))\n"
+    "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"-\", \" \")) %>%\n",
+    "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"'\", \"\")) %>%\n",
+    "    mutate(PLAYER_NAME = str_to_title(PLAYER_NAME))\n",
+    "\n",
+    "common_player_info <- common_player_info %>%\n",
+    "    mutate(PLAYER_NAME = player_slug) %>%\n",
+    "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"-\", \" \")) %>%\n",
+    "    mutate(PLAYER_NAME = str_to_title(PLAYER_NAME))\n",
+    "\n",
+    "height_2014 <- height_2014 %>%\n",
+    "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"-\", \" \")) %>%\n",
+    "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"'\", \"\")) %>%\n",
+    "    mutate(PLAYER_NAME = str_to_title(PLAYER_NAME))\n"
    ]
   },
   {
@@ -87,11 +97,10 @@
    },
    "outputs": [],
    "source": [
-    "colnames(raw_shots)\n",
     "colnames(clean_shots)\n",
     "colnames(player_info)\n",
     "colnames(player_salary)\n",
-    "colnames(common_player_info)\n",
+    "colnames(height_2014)\n",
     "#player_statistics %>% count() %>% collect()\n",
     "#head(raw_shots)\n",
     "#head(player_info)\n",
@@ -336,20 +345,27 @@
    "outputs": [],
    "source": [
     "predictors <- c(\"PLAYER_NAME\", \"CLOSEST_DEFENDER\" ,\"SHOT_DIST\", \"PTS_TYPE\", \"CLOSE_DEF_DIST\", \"SHOT_CLOCK\", \"TOUCH_TIME\", \"PERIOD\", \"SUCCESS\")\n",
-    "colnames(player_info)\n",
     "colnames(clean_shots)\n",
-    "head(common_player_info %>% filter(first_name == \"Tim\"))\n",
     "\n",
-    "lookup_height_pos <- player_info %>%\n",
+    "player_height_pos_1 <- player_info %>%\n",
     "    select(PLAYER_NAME, Height, Pos)\n",
+    "\n",
+    "player_height_pos_2 <- common_player_info %>% #no position for now, working on this\n",
+    "    select(PLAYER_NAME, height, position)\n",
+    "\n",
+    "player_height_3 <- height_2014 %>%\n",
+    "    select(PLAYER_NAME, \"Height(Feet-Inches)\")\n",
     "\n",
     "model_data <- clean_shots %>% \n",
     "    select(all_of(predictors)) %>%\n",
-    "    left_join(lookup_height_pos, by=\"PLAYER_NAME\", relationship = \"many-to-many\") %>%\n",
-    "    rename(SHOOTER_POS = Pos, SHOOTER_HEIGHT = Height) %>%\n",
-    "    left_join(lookup_height_pos %>% rename(CLOSEST_DEFENDER = PLAYER_NAME), by=\"CLOSEST_DEFENDER\") %>%\n",
-    "    rename(DEFENDER_POS = Pos, DEFENDER_HEIGHT = Height)\n",
-    "\n",
+    "    left_join(player_height_pos_1, by=\"PLAYER_NAME\", relationship = \"many-to-many\") %>%\n",
+    "    rename(P1 = Pos, H1 = Height) %>%\n",
+    "    left_join(player_height_pos_2, by=\"PLAYER_NAME\", relationship = \"many-to-many\") %>%\n",
+    "    rename(P2 = position, H2 = height) %>%\n",
+    "    left_join(player_height_3, by=\"PLAYER_NAME\", relationship = \"many-to-many\") %>%\n",
+    "    rename(H3 = \"Height(Feet-Inches)\")\n",
+    "    #left_join(lookup_height_pos %>% rename(CLOSEST_DEFENDER = PLAYER_NAME), by=\"CLOSEST_DEFENDER\") %>%\n",
+    "    #rename(DEFENDER_POS = Pos, DEFENDER_HEIGHT = Height)\n",
     "\n",
     "\n",
     "set.seed(0)\n",
@@ -357,14 +373,7 @@
     "train <- model_data[train_indices, ]\n",
     "test <- model_data[-train_indices, ]\n",
     "\n",
-    "#lookup_height_pos %>% head(10)\n",
-    "\n",
-    "\n",
     "#dplyr::filter(clean_shots, grepl(\"Kyle\",PLAYER_NAME)) ## found issues with apostrophe in name of Kyle O'Quinn (was Oquinn)\n",
-    "\n",
-    "bad_names <- model_data %>% filter(is.na(SHOOTER_HEIGHT) | is.na(SHOOTER_POS)) %>% distinct(PLAYER_NAME, .keep_all=FALSE)\n",
-    "\n",
-    "dplyr::filter(player_info, grepl(\"Hardaway\",PLAYER_NAME))\n",
     "\n",
     "#player_info %>% filter(Team == \"LAL\") %>% distinct(PLAYER_NAME)\n",
     "\n",
@@ -374,24 +383,23 @@
     "#Brandan Wright not in player_info. Played for BOS and got traded to PHX at some point\n",
     "#Cody Zeller ... Played for Charlotte Bobcats\n",
     "\n",
-    "model_data %>% filter(is.na(SHOOTER_HEIGHT)) %>% count()\n",
-    "bad_names\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19368c1b",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "bad_names %>% mutate(Surname = str_extract(PLAYER_NAME, \"\\\\S+$\")) %>% left_join(player_info %>% select(Surname, Age))\n",
-    "player_info %>% head(10)\n",
-    "dplyr::filter(player_info, grepl(\"Williams\",PLAYER_NAME))"
+    "distinct_shooters <- model_data %>% distinct(PLAYER_NAME) \n",
+    "\n",
+    "model_data %>%\n",
+    "  group_by(PLAYER_NAME) %>%\n",
+    "  summarise(\n",
+    "    H1_na = any(is.na(H1)),\n",
+    "    H2_na = any(is.na(H2)),\n",
+    "    H3_na = any(is.na(H3)),\n",
+    "    H_all_na = all(is.na(H1) & is.na(H2) & is.na(H3))\n",
+    "  ) %>%\n",
+    "  summarise(\n",
+    "    H1_na_count = sum(H1_na),\n",
+    "    H2_na_count = sum(H2_na),\n",
+    "    H3_na_count = sum(H3_na),\n",
+    "    H_all_na_count = sum(H_all_na)\n",
+    "  )\n",
+    "\n"
    ]
   },
   {
@@ -444,7 +452,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.4.1"
+   "version": "4.4.3"
   }
  },
  "nbformat": 4,
