added mean touch time (per period) anova and mixed model anova, not sure if correct - but makes sense that 4th period has different touch time. maybe check for close games?

--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -16,7 +16,7 @@
    },
    "outputs": [],
    "source": [
-    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"arrow\", \"dbplyr\", \"duckdb\", \"lme4\", \"dbscan\", \"pROC\", \"caTools\")\n",
+    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"arrow\", \"dbplyr\", \"duckdb\", \"lme4\", \"lmerTest\", \"dbscan\", \"pROC\", \"caTools\", \"ez\")\n",
     "new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,\"Package\"])]\n",
     "if(length(new.packages)) install.packages(new.packages)\n",
     "\n",
@@ -27,9 +27,11 @@
     "library(arrow)\n",
     "library(duckdb)\n",
     "library(lme4)\n",
+    "library(lmerTest)\n",
     "library(dbscan)\n",
     "library(pROC)\n",
-    "library(caTools)"
+    "library(caTools)\n",
+    "library(ez)"
    ]
   },
   {
@@ -51,7 +53,7 @@
     "clean_shots <- read_csv(\"../Data/NBA_Shots_Clean_Example.csv\")\n",
     "common_player_info <- read_csv(\"../Data/wyatt_basketball/csv/common_player_info.csv\")\n",
     "common_player_info <- common_player_info %>% mutate(PLAYER_NAME = paste(first_name, last_name))\n",
-    "height_2014 <- read_csv(\"../Data/simonwarchol-NBA-Height-Weight-7871d8b/CSVs/Yearly/2014.csv\")\n",
+    "height_2014 <- read_csv(\"../Data/NBA-Height-Weight/CSVs/Yearly/2014.csv\") # https://github.com/simonwarchol/NBA-Height-Weight\n",
     "height_2014 <- height_2014 %>% rename(PLAYER_NAME = Name)\n",
     "\n",
     "#clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Kyle Oquinn\", \"Kyle O'Quinn\")))\n",
@@ -60,8 +62,9 @@
     "#clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Oj Mayo\", \"O.J. Mayo\")))\n",
     "#clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Cj Miles\", \"C.J. Miles\")))\n",
     "clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Time Hardaway Jr\", \"Tim Hardaway Jr\")))\n",
-    "player_info <- player_info %>% mutate(across(where(is.character), ~ str_replace_all(., \"Luc Mbah\", \"Luc Mbah a Moute\")))\n",
     "clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Steve Adams\", \"Steven Adams\")))\n",
+    "player_info <- player_info %>% mutate(across(where(is.character), ~ str_replace_all(., \"Luc Mbah\", \"Luc Mbah a Moute\")))\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -383,8 +386,6 @@
     "#Brandan Wright not in player_info. Played for BOS and got traded to PHX at some point\n",
     "#Cody Zeller ... Played for Charlotte Bobcats\n",
     "\n",
-    "distinct_shooters <- model_data %>% distinct(PLAYER_NAME) \n",
-    "\n",
     "model_data %>%\n",
     "  group_by(PLAYER_NAME) %>%\n",
     "  summarise(\n",
@@ -438,6 +439,56 @@
     "ggplot(clean_shots, aes(x=SHOT_DIST, y=TOUCH_TIME)) + \n",
     "    geom_point()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94e5f50f",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "period_mtt <- clean_shots %>%\n",
+    "    group_by(GAME_ID, PERIOD) %>%\n",
+    "    summarise(mean_tt = mean(TOUCH_TIME))\n",
+    "\n",
+    "ggplot(period_mtt, aes(x = factor(PERIOD), y = mean_tt)) +\n",
+    "  geom_boxplot() +\n",
+    "  labs(\n",
+    "    x = \"Period\",\n",
+    "    y = \"Mean Touch Time\",\n",
+    "    title = \"Distribution of Mean Touch Time by Period\"\n",
+    "  )\n",
+    "\n",
+    "clean_shots %>% \n",
+    "    filter(PERIOD >= 5) %>%\n",
+    "    summarise(overtime_games = n_distinct(GAME_ID))\n",
+    "\n",
+    "period_mtt <- period_mtt %>% filter(PERIOD <= 4) %>% mutate_at(c(\"PERIOD\", \"GAME_ID\"), as.factor)\n",
+    "\n",
+    "summary(aov(mean_tt ~ PERIOD, data=period_mtt))\n",
+    "\n",
+    "model <- lmer(mean_tt ~ PERIOD + (1|GAME_ID), data = period_mtt)\n",
+    "\n",
+    "anova(model)\n",
+    "\n",
+    "summary(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e77d9db1",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -452,7 +503,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.4.3"
+   "version": "4.4.1"
   }
  },
  "nbformat": 4,
